CR-2007-12-07-0: Bugfix:    fixed wrong close behaviour in close_spawn_process()
                 Review:    JG

JG-2007-12-07-0: Enhancem.: Be more fault tolerant when closing rlogin 
                            connections, some cleanup.
                 Review:    CR

CR-2007-12-05-1: Bugfix:    HOTFIX for check-in CR-2007-12-05-0
                            startup of hedeby master host output parsing error
                 Review:    RH

CR-2007-12-05-0: Enhancem.: hedeby_install should install managed hosts parallel
                            (also shutdown startup is parallel now)
                 Issue:     hedeby issue #244
                 Review:    RH

AP-2007-12-05-0: Enhancem.: ARCo: adding create synonym privilege to arco_read_user
                 Review:    JO

RD-2007-12-04-0: Bugfix:    removed wait_for_enter in test 2378

JO-2007-12-04-0: Bugfix:    Revoke priviledges on tablespace before dropping user
                 Review:    AP

JG-2007-12-03-0: Enhancem.: Merged changes which were lost due to revert
                            RD-2007-10-12-0.
                            Improved error messages, output real error output 
                            instead of "error or binary not found".
                 Review:    MD

EB-2007-12-03-0: Bugfix:    scheduler calculation time was sometimes bigger than
                            scheduler total time in performance test.
                 Review:    AA

CR-2007-11-30-0: Enhancem.: Hedeby: cleanup sdmadm wrapper functions
                            Hedeby: add spare pool resources in install test
                 Issue:     217
                 Review:    RD

RH-2007-11-30-0: Bugfix:    Hedeby: changes in show_component_status output fixed
                 Review:    CR

JG-2007-11-30-0: Bugfix:    removed a "wait_for_enter"

MP-2007-11-30-0: Bugfix:    fix of print_results function that fixes matching
                            braces and only reads tests in current checktree